// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner Renders banners markup 1`] = `
Array [
  <div
    class="--bg-banner --mobile --sticky"
  >
    <div
      class="banner"
      id="sticky2_mob"
    >
      <div />
    </div>
  </div>,
  <div>
    <div
      class="--bg-banner --mobile"
    >
      <div
        class="banner"
        id="sticky1_mob"
      >
        <div />
      </div>
    </div>
  </div>,
]
`;

exports[`Banner Renders banners markup 2`] = `
<div
  class="--bg-banner --mobile --sticky"
>
  <div
    class="banner"
    id="sticky2_mob"
  >
    <div />
  </div>
</div>
`;
